feat: add site content type declarations (#167)
